--- a/hateless-plugin/pages/index.html
+++ b/hateless-plugin/pages/index.html
@@ -20,11 +20,7 @@
       <input type="checkbox" id="btn_sound" />
       <span class="label-text pad">Enable sound alarms</span>
     </label>
-
     <input type="button" id="btn_history" class="center-image inv-text"  value="Show history" name="Show History"/>
-
-    <script src="renderer.js">
-
-    </script>
+    <script src="renderer.js"></script>
   </body>
 </html>
